# ChangeLog for sys-kernel/git-sources
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.123 2007/11/27 18:39:24 mpagano Exp $

*git-sources-2.6.24_rc3-r2 (27 Nov 2007)

  27 Nov 2007; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.24_rc3-r2.ebuild:
  Version bump

*git-sources-2.6.24_rc3-r1 (20 Nov 2007)

  20 Nov 2007; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.24_rc3-r1.ebuild:
  Version bump

*git-sources-2.6.24_rc2-r6 (16 Nov 2007)

  16 Nov 2007; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.24_rc2-r6.ebuild:
  Version bump

  14 Nov 2007; Robin H. Johnson <robbat2@gentoo.org>
  git-sources-2.6.24_rc1-r10.ebuild, git-sources-2.6.24_rc1-r15.ebuild,
  git-sources-2.6.24_rc2-r1.ebuild, git-sources-2.6.24_rc2-r3.ebuild:
  Fix $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.123 2007/11/27 18:39:24 mpagano Exp $ string.

*git-sources-2.6.24_rc2-r3 (13 Nov 2007)

  13 Nov 2007; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.24_rc2-r3.ebuild:
  Version bump.

  11 Nov 2007; Michael Pagano <mpagano@gentoo.org> ChangeLog:
  New version bump. Old versions dump

  09 Nov 2007; Mike Pagano <mpagano@gentoo.org>
  -git-sources-2.6.23-r2.ebuild, -git-sources-2.6.23-r4.ebuild,
  -git-sources-2.6.23-r7.ebuild, -git-sources-2.6.23-r8.ebuild,
  -git-sources-2.6.23-r9.ebuild, -git-sources-2.6.23-r13.ebuild,
  -git-sources-2.6.23-r17.ebuild:
  Removing old versions.

*git-sources-2.6.24_rc1-r15 (06 Nov 2007)

  06 Nov 2007; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.24_rc1-r15.ebuild:
  Version bump: Linux 2.6.24-rc1-r15

*git-sources-2.6.24_rc1-r10 (01 Nov 2007)

  01 Nov 2007; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.24_rc1-r10.ebuild:
  Linux 2.6.24-rc1-r10

*git-sources-2.6.24_rc1-r7 (30 Oct 2007)

  30 Oct 2007; Christian Heim <phreak@gentoo.org>
  +git-sources-2.6.24_rc1-r7.ebuild:
  Linux 2.6.24-rc1-r7.
