@@ -8,6 +8,7 @@ DIST patch-2.6.24-rc2-git6.bz2 326109 RMD160 1255cde55b4de8fe1759c7cb9392dd19400
 DIST patch-2.6.24-rc2.bz2 9161681 RMD160 738119066eb1b91ac6e4db299dd81e469412f019 SHA1 b9a44371004907b87f17d8db52afb17a22669f96 SHA256 c316760b5489af874cfc0fdba4b0d9aacf597abeb94a871a6fbaf9876b7e4fd6
 DIST patch-2.6.24-rc3-git1.bz2 6078 RMD160 3012df7229c6be58e223566a0410dc3b02a6f049 SHA1 da24f64bb7aebc06886ebabec84871cf1dcbc4e8 SHA256 0f6d052018f94bb81737d8801ff485725a128a015e3aeafebd05501c9d4d4d73
 DIST patch-2.6.24-rc3-git2.bz2 139145 RMD160 3abf61cb0061815e665c750a510eae5556513678 SHA1 71e03062d5f772f013a0e9fa2d0baecda1381c8b SHA256 509350d5dbe5552ee2e59240ddb5824da47f8661519e28ff527e5d59bb423e20
+DIST patch-2.6.24-rc3-git3.bz2 153358 RMD160 ae11225ad41c48ce3187c006c89f07e36957f5e8 SHA1 f2107549f7b4d47cfe5ae3e4e93b107bb1ce0fe6 SHA256 ac93aa7fd2974c6c4e37e8bee1b46e0767233a2528474a863b5c9069f914dbb0
 DIST patch-2.6.24-rc3.bz2 9400638 RMD160 33451d823d42361571fb2095119dd0ef62d9f1a8 SHA1 7f77a35eecf6572f87c75be9132811383a628784 SHA256 d37b8acfb42f81052badfb9bb6d7cc9697a31cd469cc6d9dc4bb046a150cae30
 EBUILD git-sources-2.6.24_rc1-r10.ebuild 1235 RMD160 b3ac23ae1f674f8135d2758575415986a096ce63 SHA1 321c9fc5f946b3770ebb133eb943774fadd4b7ee SHA256 6652ef33565ab6ae87f81c645c38a8295645e2980e35a288080a9229dfc0acf0
 MD5 e1de5a626ce52c2159a1022aeff6d0ef git-sources-2.6.24_rc1-r10.ebuild 1235
@@ -37,10 +38,14 @@ EBUILD git-sources-2.6.24_rc3-r2.ebuild 1234 RMD160 8d04c1aff5559dee16486cc47a20
 MD5 fedcb13b2e1aaa1c289ddcb200e935a0 git-sources-2.6.24_rc3-r2.ebuild 1234
 RMD160 8d04c1aff5559dee16486cc47a204f7124b6da2b git-sources-2.6.24_rc3-r2.ebuild 1234
 SHA256 264901fbc5928f1f1109d5fbe4629122b8ce60f75bbb3559c7a277276bc0e6f8 git-sources-2.6.24_rc3-r2.ebuild 1234
-MISC ChangeLog 23912 RMD160 dfcdae9651990e34c5b390900ff3eda748fd73c7 SHA1 c063e8ad34d3840c6564a9f46d6b2adbf5a4b2c1 SHA256 7589f51fd84fe03bf7abf11626e037dfc2f92d39ff9efaef07776b5ba2744fee
-MD5 93a59365188edb3bf0aabeb2e3b63f78 ChangeLog 23912
-RMD160 dfcdae9651990e34c5b390900ff3eda748fd73c7 ChangeLog 23912
-SHA256 7589f51fd84fe03bf7abf11626e037dfc2f92d39ff9efaef07776b5ba2744fee ChangeLog 23912
+EBUILD git-sources-2.6.24_rc3-r3.ebuild 1234 RMD160 52003c3e3110012ee04aa981793d1d98feee1366 SHA1 b877325d88838463ed1a1d913fe11d8c215b1b9a SHA256 0c1da7f3d49b76ddf830d63a300e9936503ddc406b7b7fcfec24ed1c0443632a
+MD5 74a258220ae13c1216620a8e1b4b29d4 git-sources-2.6.24_rc3-r3.ebuild 1234
+RMD160 52003c3e3110012ee04aa981793d1d98feee1366 git-sources-2.6.24_rc3-r3.ebuild 1234
+SHA256 0c1da7f3d49b76ddf830d63a300e9936503ddc406b7b7fcfec24ed1c0443632a git-sources-2.6.24_rc3-r3.ebuild 1234
+MISC ChangeLog 24058 RMD160 a7a22aad59f5651f906966580be1e104c268c797 SHA1 1b9fdb658ea1b12235c7626a16ebcda43424cb88 SHA256 b1ae331c7034d5684236a59d2dc31486dce1b2675d31408809f488dd059c3744
+MD5 6fe06339f51f95ce621ad3ff36899aea ChangeLog 24058
+RMD160 a7a22aad59f5651f906966580be1e104c268c797 ChangeLog 24058
+SHA256 b1ae331c7034d5684236a59d2dc31486dce1b2675d31408809f488dd059c3744 ChangeLog 24058
 MISC metadata.xml 449 RMD160 d294fadd32041f41f221d9c50a04cba964d56d2a SHA1 23042103b1ded51439d907767fe19fbde8834cf6 SHA256 5ba3a4038eb9f870f3fcc1d67c223efda046210a313bd4c0ffff7fb382e7e2d0
 MD5 8ca405b8c53bdbeb5e1c6e981420b315 metadata.xml 449
 RMD160 d294fadd32041f41f221d9c50a04cba964d56d2a metadata.xml 449
@@ -66,3 +71,6 @@ SHA256 390a89f450dbb8423114f55ec9d91b5a2246d91d853ee71c26d5b3523a1e2cee files/di
 MD5 0e4d85525eea54a9514c242f75c67b01 files/digest-git-sources-2.6.24_rc3-r2 747
 RMD160 e4b949e7c0aa01f02328b57483121022c3704dd0 files/digest-git-sources-2.6.24_rc3-r2 747
 SHA256 384fb2e9876b4e63216aa82cd4e322702ca77e470f8c70c11de57e1973270872 files/digest-git-sources-2.6.24_rc3-r2 747
+MD5 ac4754e93426617c63df003f45b6183d files/digest-git-sources-2.6.24_rc3-r3 747
+RMD160 f972387280e2be684cd3a2ecf4985f43d122b8f0 files/digest-git-sources-2.6.24_rc3-r3 747
+SHA256 08102ea082a62238c2cf15c22bdec04b682217df112051217912317fb416ec0b files/digest-git-sources-2.6.24_rc3-r3 747
