@@ -1,0 +1,9 @@
+MD5 2cc2fd4d521dc5d7cfce0d8a9d1b3472 linux-2.6.23.tar.bz2 45488158
+RMD160 755690e80751d5de86d260fe05c6eeadde116c4e linux-2.6.23.tar.bz2 45488158
+SHA256 d4e67c0935ffb2a4158234bff92cc791b83177866009fc9b2214104e0038dbdb linux-2.6.23.tar.bz2 45488158
+MD5 99d97a3d35d57e77dd05bf57c616ebc9 patch-2.6.24-rc3-git3.bz2 153358
+RMD160 ae11225ad41c48ce3187c006c89f07e36957f5e8 patch-2.6.24-rc3-git3.bz2 153358
+SHA256 ac93aa7fd2974c6c4e37e8bee1b46e0767233a2528474a863b5c9069f914dbb0 patch-2.6.24-rc3-git3.bz2 153358
+MD5 b9a66b38fdfa600112f0c6172440a179 patch-2.6.24-rc3.bz2 9400638
+RMD160 33451d823d42361571fb2095119dd0ef62d9f1a8 patch-2.6.24-rc3.bz2 9400638
+SHA256 d37b8acfb42f81052badfb9bb6d7cc9697a31cd469cc6d9dc4bb046a150cae30 patch-2.6.24-rc3.bz2 9400638
