@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.123 2007/11/27 18:39:24 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.124 2007/11/29 02:31:23 mpagano Exp $
+
+*git-sources-2.6.24_rc3-r3 (29 Nov 2007)
+
+  29 Nov 2007; Michael Pagano <mpagano@gentoo.org>
+  +git-sources-2.6.24_rc3-r3.ebuild:
+  Version bump
 
 *git-sources-2.6.24_rc3-r2 (27 Nov 2007)
 
@@ -23,7 +29,7 @@
   14 Nov 2007; Robin H. Johnson <robbat2@gentoo.org>
   git-sources-2.6.24_rc1-r10.ebuild, git-sources-2.6.24_rc1-r15.ebuild,
   git-sources-2.6.24_rc2-r1.ebuild, git-sources-2.6.24_rc2-r3.ebuild:
-  Fix $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.123 2007/11/27 18:39:24 mpagano Exp $ string.
+  Fix $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.124 2007/11/29 02:31:23 mpagano Exp $ string.
 
 *git-sources-2.6.24_rc2-r3 (13 Nov 2007)
 
